<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="from_value_in">From value in</string>
    <string name="to_value_in">To value in</string>
    <string name="calculate">Convert</string>
    <string name="zero">0,00</string>
    <string name="flag">Flag</string>
    <string name="input_value">Input your Value</string>
    <string name="no_number">Please provide an amount to convert</string>
    <string name="map">Maps</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="share_text">I just converted %s %s to %s %s using Currency Converter</string>
    <string name="edit_currency">Edit Currency Rate</string>
    <string name="edit_text">Editing %s</string>
    <string name="reset">Reset</string>
    <string name="current_rate">Current rate: %s</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="about_text">Currency Converter is a simple app that converts currencies.</string>
    <string name="currency_change">Currency rate for %s changed</string>
    <string name="currency_reset">Resetted all currency rates</string>
    <string name="currency_update">Updated currency rates</string>
    <string name="no_internet">No internet connection</string>
    <string name="version">Version: %s</string>
    <string name="github">Github</string>
</resources>