<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_menu"
        android:title="@string/refresh"
        android:icon="@drawable/refresh_icon"
        android:visible="true"
        app:showAsAction="ifRoom|never" />
    <item
        android:id="@+id/maps_menu"
        android:title="@string/map"
        android:visible="true"
        android:icon="@drawable/map_icon"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/edit_menu"
        android:title="@string/edit"
        android:visible="true"
        android:icon="@drawable/edit_icon"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/reset_menu"
        android:title="@string/reset"
        android:visible="true"
        android:icon="@drawable/reset_icon"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/about_menu"
        android:title="@string/about"
        android:visible="true"
        android:icon="@drawable/about_icon"
        android:orderInCategory="@android:integer/config_longAnimTime"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/share_icon"
        app:showAsAction="never"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
</menu>