<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/from_value"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/from_value_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/to_value"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="@+id/from_value"
        app:layout_constraintTop_toBottomOf="@+id/from_value" />

    <TextView
        android:id="@+id/from_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/from_value_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/to_value_in"
        app:layout_constraintEnd_toEndOf="@+id/from_value_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_value_tv" />

    <EditText
        android:id="@+id/number_input"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/input_value"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/to_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_value"
        android:autofillHints="@string/input_value" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:onClick="onConvertClick"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_value_tv" />

    <TextView
        android:id="@+id/Converted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:allowUndo="false"
        android:clickable="false"
        android:maxWidth="210dp"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_value" />

</androidx.constraintlayout.widget.ConstraintLayout>